# crust_data_support_agent

./: README.md  pyproject.toml  server.py
app/: dependencies.py  main.py
app/agent/: agent.py  config.py
app/agent/tools/: functions.py  schemas.py  tools.py
app/api/: conversation.py  knowledge_base.py
app/config/: db.py
app/models/: __init__.py  conversation.py  knowledge_base.py  requests.py  responses.py
app/services/: conversation.py  knowledge_base.py
